# project-agent-framework

./: .gitignore  AGENTS.md  PRD.md  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: release.yml
fixtures/sample_target_project/: PRD.md  README.md  TODO.yml  pyproject.toml
fixtures/sample_target_project/data/: items.yml
fixtures/sample_target_project/src/inventory_report/: __init__.py  cli.py  report.py
scripts/: run_demo.py  run_framework.py  summarize_failure.py  task_reader.py  task_updater.py  validate_todo.py
src/project_agent_framework/: __init__.py  bootstrap.py  cli.py  constants.py  demo.py  exceptions.py  failure_summary.py  git_tools.py  logging_utils.py  models.py  orchestrator.py  prompts.py  resources.py  runners.py  selection.py  todo.py
src/project_agent_framework/resources/agents/: architect.md  coder.md  final_qa.md  qa.md  shared.md
src/project_agent_framework/resources/demo_project/: PRD.md  README.md  TODO.yml  pyproject.toml
src/project_agent_framework/resources/demo_project/data/: items.yml
src/project_agent_framework/resources/demo_project/src/inventory_report/: __init__.py  cli.py  report.py
tests/: test_orchestrator.py  test_permissions.py  test_sample_project_fixture.py  test_selection.py  test_todo_validation.py
